--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -1,9 +1,9 @@
 import Link from 'components/Link';
 
-Hey! I’m Anton ![My photo](/anton-fresher.jpeg)
+Hey! I'm Anton ![My photo](/anton-fresher.jpeg)
 
 Generally, you would see me jumping in between design, software engineering, product management, leadership, and writing, still figuring out what to do with all this.
 
-Now I'm building a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
+Now I'm designing a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
 
 Before that, I was a product designer at <Link href='https://practicum.yandex.ru' view='filled' color='#d5d6d8'>Yandex Practicum</Link>. Previously, worked as a software engineer at <Link href='https://surveys.yandex.com/' view='filled' color='#b8caf4'>Yandex Surveys</Link>, and earned a BSc in math and computer science.
