Update buttons and colors

--- a/src/pages/work/tripleten.mdx
+++ b/src/pages/work/tripleten.mdx
@@ -40,7 +40,7 @@ I joined TripleTen as one of the first designers when it had just started buildi
 
 ---
 
-# TripleTen’s half-a-year-long homepage redesign
+# New homepage
 
 TripleTen's homepage plays a major role in the student experience. It's where they start their learning, track their progress, revisit past material, check payment status, and more. In fact, 30% of all user sessions include the homepage.
 
