--- a/src/pages/work/tripleten.mdx
+++ b/src/pages/work/tripleten.mdx
@@ -38,15 +38,14 @@ I joined TripleTen as one of the first designers when it had just started buildi
 
 <span className="Caption">TripleTen’s learning platform</span>
 
----
 
-# New homepage
+## New homepage
 
 TripleTen's homepage plays a major role in the student experience. It's where they start their learning, track their progress, revisit past material, check payment status, and more. In fact, 30% of all user sessions include the homepage.
 
 That's why TripleTen's homepage has become a place for regular experiments, new feature updates, and other types of changes that require a scalable design. When I joined the company, our homepage was neither user-friendly nor flexible. It took almost two years to fix this, resulting in the complete rebuilding of the homepage.
 
-## How it started
+### How it started
 
 TripleTen inherited its homepage from Yandex Practicum, along with the rest of the platform. Initially, the homepage was dead simple: a large card displaying the current lesson, and a few more blocks to monitor overall progress and navigate between the program's modules.
 
@@ -59,7 +58,7 @@ TripleTen inherited its homepage from Yandex Practicum, along with the rest of t
 
 There were many issues with this page. For example, a quarter of the space was occupied by a black column listing enrolled programs. This was completely unnecessary, as most of our students only enroll in one program at a time, so switching between them is rarely required.
 
-## Spin-off: the (not so) little redesign that couldn't
+### Spin-off: the (not so) little redesign that couldn't
 
 At Yandex Practicum, we have always wanted to build advanced learning productivity tools, such as a study calendar, planner, streaks, favorites, etc. However, implementing these features was challenging due to a high amount of technical and design debt. In addition, our focus on growth at that time meant that these features were always deprioritized.
 
@@ -79,7 +78,7 @@ You can already guess that this project never made it to the production stage. D
 
 More than that, for me, as a newbie, redesigning a large part of the product was the perfect chance to learn about the product, its information architecture, and its limitations.
 
-## Increasing complexity of navigation with the number of tools
+### Increasing complexity of navigation with the number of tools
 
 When our team realized that the Homepage 2.0 project was not feasible, our team changed their approach to make such changes incrementally. For example, we quickly hid the black panel with all enrolled programs — a relatively minor change, yet it improved the overall hierarchy.
 
@@ -93,7 +92,7 @@ After that, we began to enhance our platform by introducing various learning pro
 
 <span className="Caption">The longest homepage (try to scroll!)</span>
 
-## Coming up with a new homepage prototype
+### Coming up with a new homepage prototype
 
 The idea of a new redesign again came from designers. To me, it was clear that the product had reached a critical point: adding more features to the homepage would complicate navigation and do more harm than good. This is exactly what happened. In late 2022, we released the skillset progress widget, but a few months later, our researcher discovered that many of our students had never really noticed it.
 
@@ -122,7 +121,7 @@ This change has made navigation clear again and has added some space for new upd
 
 When the prototype was ready, we conducted usability testing, which helped to identify small issues with the new “Return to learning” block, though most students had no trouble completing our tasks.
 
-## Shaping TripleTen’s visual design language
+### Shaping TripleTen’s visual design language
 
 However, creating the first prototype was just the first step in taking the new homepage to production. This process took months, and during that time the design team started to work on a new visual design language.
 
@@ -147,7 +146,7 @@ We updated the product font and colors and applied them to the main blocks of th
 
 <span className="Caption">Old homepage in new design language</span>
 
-## Happy end
+### Happy end
 
 Not long after, we started to work with student activation and our onboarding mechanics. The new homepage redesign turned out to be essential for this. And, after a month of close collaboration with the development team, we shipped the new homepage.
 
