Open Tripleten page

--- a/src/pages/work/tripleten.mdx
+++ b/src/pages/work/tripleten.mdx
@@ -39,7 +39,7 @@ I joined TripleTen as one of the first designers when it had just started buildi
     <span className="Caption">TripleTen’s learning platform</span>
 </div>
 
-## New homepage
+## Homepage redesign
 
 TripleTen's homepage plays a major role in the student experience. It's where they start their learning, track their progress, revisit past material, check payment status, and more. In fact, 30% of all user sessions include the homepage.
 
@@ -49,13 +49,11 @@ That's why TripleTen's homepage has become a place for regular experiments, new 
 
 TripleTen inherited its homepage from Yandex Practicum, along with the rest of the platform. Initially, the homepage was dead simple: a large card displaying the current lesson, and a few more blocks to monitor overall progress and navigate between the program's modules.
 
-<div className="WideBlock">
-    <BrowserContainerImage
-        src="/tripleten/homepage-1.0.png"
-        alt="Yandex Practicum's first homepage"
-    />
-    <span className="Caption">Yandex Practicum's first homepage</span>
-</div>
+<BrowserContainerImage
+    src="/tripleten/homepage-1.0.png"
+    alt="Yandex Practicum's first homepage"
+/>
+<span className="Caption">Yandex Practicum's first homepage</span>
 
 There were many issues with this page. For example, a quarter of the space was occupied by a black column listing enrolled programs. This was completely unnecessary, as most of our students only enroll in one program at a time, so switching between them is rarely required.
 
@@ -65,13 +63,11 @@ At Yandex Practicum, we have always wanted to build advanced learning productivi
 
 In response to this, the Homepage 2.0 project was born. This was a radical re-imagining of the entire homepage, which was mostly initiated by the design team. It was quite conceptual and included many features that didn't exist at the time. Some of these mechanics were eventually implemented a long time after, while others remain concepts to this day.
 
-<div className="WideBlock">
-    <BrowserContainerImage
-        src="/tripleten/homepage-2.0-concept.png"
-        alt="Homepage 2.0 concept"
-    />
-    <span className="Caption">Homepage 2.0 concept</span>
-</div>
+<BrowserContainerImage
+    src="/tripleten/homepage-2.0-concept.png"
+    alt="Homepage 2.0 concept"
+/>
+<span className="Caption">Homepage 2.0 concept</span>
 
 You can already guess that this project never made it to the production stage. Despite this, I never regretted the amount of work I put in, as it taught me two invaluable lessons:
 
@@ -86,14 +82,12 @@ When our team realized that the Homepage 2.0 project was not feasible, our team 
 
 After that, we began to enhance our platform by introducing various learning productivity tools. We added a search, which had been the top-requested feature for years, as well as a study calendar and a skillset progress widget. The goal of these features was to improve the student experience and increase retention. However, due to the simple structure of the homepage — a plain feed of sequential blocks — it quickly became a total mess. Now, the overall navigation needed to be redesigned.
 
-<div className="WideBlock">
-    <BrowserContainerImage
-        src="/tripleten/homepage-with-learning-tools.png"
-        alt="The longest homepage"
-        aspectRatio="16 / 9"
-    />
-    <span className="Caption">The longest homepage (try to scroll!)</span>
-</div>
+<BrowserContainerImage
+    src="/tripleten/homepage-with-learning-tools.png"
+    alt="The longest homepage"
+    aspectRatio="16 / 9"
+/>
+<span className="Caption">The longest homepage (try to scroll!)</span>
 
 ### Coming up with a new homepage prototype
 
@@ -143,13 +137,11 @@ When TripleTen became an independent startup, we could finally afford to systema
 
 We updated the product font and colors and applied them to the main blocks of the old homepage. It only took a short time to develop, but it greatly refreshed the look and feel of the homepage (and fixed some inconsistencies in progress representation, btw). This allowed users to transition to the new homepage with minimal disturbance.
 
-<div className="WideBlock">
-    <BrowserContainerImage
-        src="/tripleten/homepage-in-new-design-language.png"
-        alt="Old homepage in new design language"
-    />
-    <span className="Caption">Old homepage in new design language</span>
-</div>
+<BrowserContainerImage
+    src="/tripleten/homepage-in-new-design-language.png"
+    alt="Old homepage in new design language"
+/>
+<span className="Caption">Old homepage in new design language</span>
 
 ### Happy end
 
