--- a/src/pages/work/tripleten.mdx
+++ b/src/pages/work/tripleten.mdx
@@ -61,7 +61,7 @@ There were many issues with this page. For example, a quarter of the space was o
 
 At Yandex Practicum, we have always wanted to build advanced learning productivity tools, such as a study calendar, planner, streaks, favorites, etc. However, implementing these features was challenging due to a high amount of technical and design debt. In addition, our focus on growth at that time meant that these features were always deprioritized.
 
-In response to this, the Homepage 2.0 project was born. This was a radical re-imagining of the entire homepage, which was mostly initiated by the design team. It was quite conceptual and included many features that didn't exist at the time. Some of these mechanics were eventually implemented a long time after, while others remain concepts to this day.
+In response to this, the Homepage 2.0 project was born. This was a radical re-imagining of the entire homepage, which was mostly initiated by the design team. It was quite conceptual and included many features that didn't exist at the time.
 
 <BrowserContainerImage
     src="/tripleten/homepage-2.0-concept.png"
