--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -1,6 +1,6 @@
 import Link from 'components/Link';
 
-Hey! I'm Anton ![My photo](/anton-fresher.jpeg)
+Hey! I'm Tony ![My photo](/me.jpeg)
 
 Generally, you would see me jumping in between design, software engineering, product management, leadership, and writing, still figuring out what to do with all this.
 
