--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -6,4 +6,4 @@ Generally, you would see me jumping in between design, software engineering, pro
 
 Now I'm designing a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
 
-Before that, I was a product designer at <Link href='https://practicum.yandex.ru' view='filled' color='#d5d6d8'>Yandex Practicum</Link>. Previously, worked as a software engineer at <Link href='https://surveys.yandex.com/' view='filled' color='#b8caf4'>Yandex Surveys</Link>, and earned a BSc in math and computer science.
+Before that: product design at <Link href='https://practicum.yandex.ru' view='filled' color='#d5d6d8'>Yandex Practicum</Link>, software engineering at <Link href='https://surveys.yandex.com/' view='filled' color='#b8caf4'>Yandex Surveys</Link>, and a BSc in Mathematics and Computer Science.
