Update about and links

--- a/src/components/HomePage/About.mdx
+++ b/src/components/HomePage/About.mdx
@@ -4,6 +4,6 @@ Hey! I'm Tony ![My photo](/me.jpeg)
 
 Generally, you would see me jumping in between design, software engineering, product management, leadership, and writing, still figuring out what to do with all this.
 
-Now I'm designing a core learning platform at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online coding bootcamps.
+Now I'm designing a product at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online tech bootcamps.
 
 Before that: product design at <Link href='https://practicum.yandex.ru' view='filled' color='#d5d6d8'>Yandex Practicum</Link>, software engineering at <Link href='https://surveys.yandex.com/' view='filled' color='#b8caf4'>Yandex Surveys</Link>, and a BSc in Mathematics and Computer Science.
