--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -3,9 +3,9 @@ import {
     BrowserContainerGallery,
     BrowserContainerImage,
     BrowserContainerVideo
-} from '@/components/BrowserContainer'
-import Video from '@/components/Video'
-import WorkDescriptionPage from '@/components/WorkDescriptionPage'
+} from '@/components/browser-container'
+import Video from '@/components/video'
+import WorkDescriptionPage from '@/components/work-description-page'
 import { buildWorkMetadata } from '@/lib/metadata'
 
 export default ({ children }) => <WorkDescriptionPage meta={meta} children={children} />
