--- a/src/app/writing/mountain-tracking/page.mdx
+++ b/src/app/writing/mountain-tracking/page.mdx
@@ -1,4 +1,4 @@
-import WritingPage from '@/components/WritingPage'
+import WritingPage from '@/components/writing-page'
 import { buildArticleMetadata } from '@/lib/metadata'
 
 export default ({ children }) => <WritingPage meta={meta} children={children} />
