--- a/src/components/home-page/about.mdx
+++ b/src/components/home-page/about.mdx
@@ -1,6 +1,6 @@
 import Link from '@/components/link'
 
-Hey! I'm Tony ![My photo](/me.jpeg)
+Hey! I'm Anton ![My photo](/me.jpeg)
 
 Generally, you would see me jumping in between design, software engineering, product management, leadership, and writing, still figuring out what to do with all this.
 
