--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -2,7 +2,9 @@ import Link from '@/components/link'
 
 Hey! I'm Anton ![My photo](/me.jpeg)
 
-Generally, you would see me jumping in between design, software engineering, product management, leadership, and writing, still figuring out what to do with all this.
+For the past 8 years, I’ve been working as a product designer and engineer, finding my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people want. A generalist at heart, I’m always exploring where my craft should evolve next.
+
+I cut my teeth in consumer mobile and B2B SaaS but later found my true curiosity in education — especially how it can be transformed by AI. With a background in math and computer science, I’m a pretty technical person, yet what drives me most is using tech to make a positive impact on people’s lives.
 
 Now I'm designing a product at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online tech bootcamps.
 
