--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -1,11 +1,7 @@
 import Link from '@/components/link'
 
-Hey! I'm Anton ![My photo](/me.jpeg)
+Hey! I'm Anton ![My photo](/me.jpeg) a product designer and engineer.
 
-For the past 8 years, I’ve been working as a product designer and engineer, finding my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people want. A generalist at heart, I’m always exploring where my craft should evolve next.
+For the past 8 years working, I’ve found my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people want.
 
-I cut my teeth in consumer mobile and B2B SaaS but later found my true curiosity in education — especially how it can be transformed by AI. With a background in math and computer science, I’m a pretty technical person, yet what drives me most is using tech to make a positive impact on people’s lives.
-
-Now I'm designing a product at <Link href='https://tripleten.com' view='filled' color='#ff976b'>TripleTen</Link>, a family of online tech bootcamps.
-
-Before that: product design at <Link href='https://practicum.yandex.ru' view='filled' color='#d5d6d8'>Yandex Practicum</Link>, software engineering at <Link href='https://surveys.yandex.com/' view='filled' color='#b8caf4'>Yandex Surveys</Link>, and a BSc in Mathematics and Computer Science.
+In many parts of my life, I’m a generalist. I love moving across roles and functions to find novel solutions, ship higher quality products, and—most importantly—have fun along the way.
