--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -17,7 +17,7 @@ export const meta = {
     id: 'tripleten',
     product: 'TripleTen',
     link: 'https://tripleten.com',
-    period: '2022 — 2025'
+    period: '2022-2025'
 }
 
 export const metadata = buildWorkMetadata(meta)
@@ -41,7 +41,7 @@ I joined TripleTen as one of the first designers when it had just started buildi
             { src: '/tripleten/showcase/quiz.png', label: 'Quiz' }
         ]}
     />
-    <span className="Caption">TripleTen’s learning platform</span>
+    <span className="caption">TripleTen’s learning platform</span>
 </div>
 
 ## Homepage redesign
@@ -55,7 +55,7 @@ That's why TripleTen's homepage has become a place for regular experiments, new 
 TripleTen inherited its homepage from Yandex Practicum, along with the rest of the platform. Initially, the homepage was dead simple: a large card displaying the current lesson, and a few more blocks to monitor overall progress and navigate between the program's modules.
 
 <BrowserContainerImage src="/tripleten/homepage-1.0.png" alt="Yandex Practicum's first homepage" />
-<span className="Caption">Yandex Practicum's first homepage</span>
+<span className="caption">Yandex Practicum's first homepage</span>
 
 There were many issues with this page. For example, a quarter of the space was occupied by a black column listing enrolled programs. This was completely unnecessary, as most of our students only enroll in one program at a time, so switching between them is rarely required.
 
@@ -66,7 +66,7 @@ At Yandex Practicum, we have always wanted to build advanced learning productivi
 In response to this, the Homepage 2.0 project was born. This was a radical re-imagining of the entire homepage, which was mostly initiated by the design team. It was quite conceptual and included many features that didn't exist at the time.
 
 <BrowserContainerImage src="/tripleten/homepage-2.0-concept.png" alt="Homepage 2.0 concept" />
-<span className="Caption">Homepage 2.0 concept</span>
+<span className="caption">Homepage 2.0 concept</span>
 
 You can already guess that this project never made it to the production stage. Despite this, I never regretted the amount of work I put in, as it taught me two invaluable lessons:
 
@@ -86,7 +86,7 @@ After that, we began to enhance our platform by introducing various learning pro
     alt="The longest homepage"
     aspectRatio="16 / 9"
 />
-<span className="Caption">The longest homepage (try to scroll!)</span>
+<span className="caption">The longest homepage (try to scroll!)</span>
 
 ### Coming up with a new homepage prototype
 
@@ -99,7 +99,7 @@ Working on the new homepage, I collaborated with our UX researcher to make it as
     alt="Board with one of the respondent's homepage expectations"
 />
 
-<span className="Caption">Board with one of the respondent's homepage expectations</span>
+<span className="caption">Board with one of the respondent's homepage expectations</span>
 
 In the new prototype, I proposed splitting all blocks of the current homepage into multiple sub-pages. The new main “Home” page would become a dashboard with main actions, important information about progress, and urgent notifications. The huge calendar block would become a separate page, as would the skillset.
 
@@ -109,7 +109,7 @@ In the new prototype, I proposed splitting all blocks of the current homepage in
         controls={false}
         autoPlay
     />
-    <span className="Caption">New homepage prototype</span>
+    <span className="caption">New homepage prototype</span>
 </div>
 
 This change has made navigation clear again and has added some space for new updates: onboarding and progress-related features can be added to the main page, planning mechanics would appear on the calendar page, all about career can be combined with the skillset, and any other can be added to the sidebar.
@@ -124,13 +124,13 @@ Different parts of our product were designed by different teams and designers ov
 
 ![Old design language](/tripleten/old-design-language.png)
 
-<span className="Caption">Different parts of the interface</span>
+<span className="caption">Different parts of the interface</span>
 
 When TripleTen became an independent startup, we could finally afford to systematize the look of our product across different parts. We already had a strong communication style, so our team used it as a starting point to create a unified visual foundation for communication and product design.
 
 ![Communications](/tripleten/communications.png)
 
-<span className="Caption">TripleTen's communications</span>
+<span className="caption">TripleTen's communications</span>
 
 We updated the product font and colors and applied them to the main blocks of the old homepage. It only took a short time to develop, but it greatly refreshed the look and feel of the homepage (and fixed some inconsistencies in progress representation, btw). This allowed users to transition to the new homepage with minimal disturbance.
 
@@ -138,7 +138,7 @@ We updated the product font and colors and applied them to the main blocks of th
     src="/tripleten/homepage-in-new-design-language.png"
     alt="Old homepage in new design language"
 />
-<span className="Caption">Old homepage in new design language</span>
+<span className="caption">Old homepage in new design language</span>
 
 ### Happy end
 
@@ -156,7 +156,7 @@ Not long after, we started to work with student activation and our onboarding me
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fk5MnpfrE3piDjhdijBIRyx%2FTripleTen's-Homepage%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-3784%26viewport%3D2018%252C369%252C0.48%26t%3D1AurlfEQ1lFx2UFp-1%26scaling%3Dscale-down-width%26hide-ui%3D1"
         ></iframe>
     </BrowserContainer>
-    <span className="Caption">New homepage prototype</span>
+    <span className="caption">New homepage prototype</span>
 </div>
 
 The new homepage was designed with scalability in mind, allowing for new features and updates. After release, we added a start date widget, an onboarding checklist, Discord integration, and a settings page.
@@ -183,5 +183,5 @@ The new homepage was designed with scalability in mind, allowing for new feature
             }
         ]}
     />
-    <span className="Caption">Features based on the new homepage</span>
+    <span className="caption">Features based on the new homepage</span>
 </div>
