--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -22,11 +22,11 @@ export const meta = {
 
 export const metadata = buildWorkMetadata(meta)
 
-TripleTen is a family of beginner-friendly online coding bootcamps. It helps people with diverse backgrounds learn a new profession and build a sustainable career in tech. TripleTen was launched in 2020 by employees of [Yandex Practicum](https://practicum.yandex.ru/) — the largest Russian online learning platform — and shortly after became an independent startup operating in the US, Latin America, and Southeast Asia.
+TripleTen is a personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it serves students in both the US and LatAm markets and has 20k monthly active users. It's a part of Nebius, a NASDAQ-listed $20B AI cloud company. This is also the funniest place I’ve ever worked.
 
-I joined TripleTen as one of the first designers when it had just started building its full-fledged product team. Over the three years, I worked on the core learning platform, maintained the design system, crafted the overall design process within the company, and was responsible for most of the product interface.
+I was part of the founding team, driving the product design direction and taking on whatever else was needed to build a successful edtech product with strong design foundation.
 
-<div className="WideBlock">
+<div className="wide-block">
     <BrowserContainerGallery
         title="Platform"
         items={[
@@ -59,7 +59,7 @@ TripleTen inherited its homepage from Yandex Practicum, along with the rest of t
 
 There were many issues with this page. For example, a quarter of the space was occupied by a black column listing enrolled programs. This was completely unnecessary, as most of our students only enroll in one program at a time, so switching between them is rarely required.
 
-### Spin-off: the (not so) little redesign that couldn't
+### Spin-off: the (wishful) redesign
 
 At Yandex Practicum, we have always wanted to build advanced learning productivity tools, such as a study calendar, planner, streaks, favorites, etc. However, implementing these features was challenging due to a high amount of technical and design debt. In addition, our focus on growth at that time meant that these features were always deprioritized.
 
@@ -103,7 +103,7 @@ Working on the new homepage, I collaborated with our UX researcher to make it as
 
 In the new prototype, I proposed splitting all blocks of the current homepage into multiple sub-pages. The new main “Home” page would become a dashboard with main actions, important information about progress, and urgent notifications. The huge calendar block would become a separate page, as would the skillset.
 
-<div className="WideBlock">
+<div className="wide-block">
     <BrowserContainerVideo
         source="/tripleten/new-homepage-prototype.webm"
         controls={false}
@@ -144,7 +144,7 @@ We updated the product font and colors and applied them to the main blocks of th
 
 Not long after, we started to work with student activation and our onboarding mechanics. The new homepage redesign turned out to be essential for this. And, after a month of close collaboration with the development team, we shipped the new homepage.
 
-<div className="WideBlock">
+<div className="wide-block">
     <BrowserContainer aspectRatio="16 / 9">
         <iframe
             style={{
@@ -161,7 +161,7 @@ Not long after, we started to work with student activation and our onboarding me
 
 The new homepage was designed with scalability in mind, allowing for new features and updates. After release, we added a start date widget, an onboarding checklist, Discord integration, and a settings page.
 
-<div className="WideBlock">
+<div className="wide-block">
     <BrowserContainerGallery
         title="New features"
         items={[
