--- a/src/app/_home/components/about.mdx
+++ b/src/app/_home/components/about.mdx
@@ -2,6 +2,6 @@ import Link from '@/components/link'
 
 Hey! I'm Anton ![My photo](/me.jpeg) a product designer and engineer.
 
-For the past 8 years working, I’ve found my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people want.
+Over the past 8 years of work, I’ve found my place in tight-knit early-stage teams where I’m comfortable navigating uncertainty and doing whatever it takes to build a product people want.
 
 In many parts of my life, I’m a generalist. I love moving across roles and functions to find novel solutions, ship higher quality products, and—most importantly—have fun along the way.
