--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -22,7 +22,7 @@ export const meta = {
 
 export const metadata = buildWorkMetadata(meta)
 
-TripleTen is a personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it serves students in both the US and LatAm markets and has 20k monthly active users. It's a part of Nebius, a NASDAQ-listed $20B AI cloud company. This is also the funniest place I’ve ever worked.
+TripleTen is an AI-powered personalized learning service that takes you from gaining skills to employment. Named by [Fortune](https://fortune.com/education/articles/best-software-engineering-bootcamps/) as the best overall tech bootcamp in the US, it serves students in both the US and LatAm markets and has 20k monthly active users. It's a part of Nebius, a NASDAQ-listed $20B AI cloud company. This is also the funniest place I’ve ever worked.
 
 I was part of the founding team, driving the product design direction and taking on whatever else was needed to build a successful edtech product with strong design foundation.
 
@@ -41,8 +41,8 @@ I was part of the founding team, driving the product design direction and taking
             { src: '/tripleten/showcase/quiz.png', label: 'Quiz' }
         ]}
     />
-    <span className="caption">TripleTen’s learning platform</span>
 </div>
+<span className="caption">TripleTen’s learning platform</span>
 
 ## Homepage redesign
 
@@ -109,8 +109,8 @@ In the new prototype, I proposed splitting all blocks of the current homepage in
         controls={false}
         autoPlay
     />
-    <span className="caption">New homepage prototype</span>
 </div>
+<span className="caption">New homepage prototype</span>
 
 This change has made navigation clear again and has added some space for new updates: onboarding and progress-related features can be added to the main page, planning mechanics would appear on the calendar page, all about career can be combined with the skillset, and any other can be added to the sidebar.
 
@@ -156,8 +156,8 @@ Not long after, we started to work with student activation and our onboarding me
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fk5MnpfrE3piDjhdijBIRyx%2FTripleTen's-Homepage%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-3784%26viewport%3D2018%252C369%252C0.48%26t%3D1AurlfEQ1lFx2UFp-1%26scaling%3Dscale-down-width%26hide-ui%3D1"
         ></iframe>
     </BrowserContainer>
-    <span className="caption">New homepage prototype</span>
 </div>
+<span className="caption">New homepage prototype</span>
 
 The new homepage was designed with scalability in mind, allowing for new features and updates. After release, we added a start date widget, an onboarding checklist, Discord integration, and a settings page.
 
@@ -183,5 +183,5 @@ The new homepage was designed with scalability in mind, allowing for new feature
             }
         ]}
     />
-    <span className="caption">Features based on the new homepage</span>
 </div>
+<span className="caption">Features based on the new homepage</span>
