--- a/src/app/work/tripleten/page.mdx
+++ b/src/app/work/tripleten/page.mdx
@@ -26,6 +26,10 @@ TripleTen is an AI-powered personalized learning service that takes you from gai
 
 I was part of the founding team, driving the product design direction and taking on whatever else was needed to build a successful edtech product with strong design foundation.
 
+The content below is being updated. If you’re curious to see something more relevant, please write to [hey@tonyfresher.com](mailto:hey@tonyfresher.com).
+
+🚧🚧🚧
+
 <div className="wide-block">
     <BrowserContainerGallery
         title="Platform"
